# obvhs

./: .gitignore  Cargo.toml  README.md
assets/: kitchen.mtl  kitchen.obj.zst
examples/: basic_bvh2.rs  basic_cwbvh.rs  cornell_box_cwbvh.rs  demoscene.rs  obj_cwbvh.rs  physics.rs  sort.rs
examples/helpers/: debug.rs  load_obj.rs
src/: aabb.rs  faststack.rs  heapstack.rs  lib.rs  ray.rs  rt_triangle.rs  sort.rs  splits.rs  test_util.rs  triangle.rs
src/bvh2/: builder.rs  insertion_removal.rs  leaf_collapser.rs  mod.rs  node.rs  reinsertion.rs
src/cwbvh/: builder.rs  bvh2_to_cwbvh.rs  mod.rs  node.rs  reinsertion.rs  simd.rs  traverse_macro.rs
src/ploc/: mod.rs  morton.rs  partial_rebuild.rs  rebuild.rs
tests/: mod.rs
