[package]
name = "obvhs"
version = "0.2.2"
edition = "2021"
description = "BVH Construction and Traversal Library"
homepage = "https://github.com/DGriffin91/obvhs"
repository = "https://github.com/DGriffin91/obvhs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bvh", "sah", "aabb", "cwbvh", "ploc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = ">=0.29, <0.31", features = ["bytemuck"] }
half = "2.3.1"
bytemuck = { version = "1.23", features = ["derive", "extern_crate_alloc"] }
rdst = { version = "0.20.14", default-features = false }
rayon = { version = "1.9.0", optional = true }

# Noop unless one of the profile-with features below is also used
profiling = { version = "1.0", optional = true }

[dev-dependencies]
image = "0.24"

[features]
default = []
parallel = ["dep:rayon", "rdst/multi-threaded"]
timeit = []

profile = ["dep:profiling"]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
